# ccn-covid-analysis

./: .gitignore  Pipfile  README.md  annotate_category_org_local.py  bytes_per_category.py  bytes_per_category_per_quantile.py  bytes_per_category_per_user.py  bytes_per_day_of_week.py  bytes_per_online_day_per_user.py  bytes_per_org_category_per_quantile.py  bytes_per_org_per_quantile.py  bytes_per_protocol_trends.py  bytes_per_time_of_day.py  bytes_per_user.py  bytes_per_week.py  canonicalize_data.py  clean.py  clean_dict.py  compute_first_time_user_transactions.py  compute_paper_stats.py  compute_user_active_deltas.py  compute_user_currency_balance.py  compute_user_data_balance.py  dl_ul_ratio_per_user.py  dns-logs.ipynb  economics.ipynb  example-platform-conf.toml  explore_parquet.py  export_agg.py  flows_to_elk.sh  generate_install_cost.py  generate_shared_intermediates.py  get_first_time_user_transactions.py  get_revenue_data.py  health_domains.py  loan_credits_per_day.py  loan_credits_per_user.py  local_ice_loopback.py  local_traffic.py  local_vs_external_throughput.py  (+28 more)
bok/: constants.py  dask_infra.py  datatypes.py  domains.py  parsers.py  pd_infra.py  platform.py
cleaning/: annotate_local_flows.py  canonicalize_data.py  clean.py  shift_to_local_time.py  trim_to_consistent_size.py
data/: README.md
exploration/: README.md  dns-logs.ipynb  economics.ipynb  transactions.ipynb
infra/: constants.py  dask.py  parsers.py  pd.py  platform.py
intermediates/: compute_aggregations.py  compute_first_time_user_transactions.py  compute_log_gaps.py  (+2 more)
(+21 files in other folders)
