[tool.poetry]
name = "ccn-analysis"
version = "0.1.0"
description = "Code to analyze Community Cellular Network usage and finance data."
authors = ["Matt Johnson <matt9j@cs.washington.edu>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
pandas = "^1.1.3"
altair = "^4.1.0"
numba = "^0.52.0"
bokeh = "^2.2.3"
scikit-learn = "^0.23.2"
statsmodels = "^0.12.0"
dask = {version = "^2.30.0", extras = ["distributed", "dataframe", "array"]}
tomlkit = "^0.7.0"
fastparquet = "^0.5.0"
python-snappy = "^0.5.4"
altair-saver = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
